Fixed z-index on leaflet toolbar.

--- a/app/assets/stylesheets/modules/layout.css.scss
+++ b/app/assets/stylesheets/modules/layout.css.scss
@@ -61,7 +61,6 @@ footer {
 .toolbar {
   background: transparent;
   padding-top: $tophat-clearance;
-  height: 58px;
   position: absolute;
   z-index: 100;
   padding-left: $toolbar-logo-container-width;
